# Kathari-facturen

./: .gitignore  Pipfile  README.md  bedrijven.json  facturen.json  generateInvoice.py  generateInvoicePdf.py  hello.py  invoice.css  invoice.html  main.py  offerte copy.html  offerte.html  pyproject.toml  query_yes_no.py  script.py  scriptInvoice.py  settings.json
data/: input.json  output.json
models/: companies.py  customers.py  database.py  invoices.py
scripts/: date_utils.py  json_utils.py
templates/: invoice.css  invoice.html  invoice_old.html  reroot.css  reroot.html  style.css
