[tool.poetry]
name = "kathari-facturen"
version = "0.1.0"
description = ""
authors = ["Yannick Lenaerts <ylenaerts89@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
weasyprint = "^54.2"
pycairo = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
