[project]
name = "kathari-facturen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "weasyprint==57.2",
  "pycairo==1.23.0",
  "pydantic==1.10.4",
  "click==8.1.3",
  "jinja2==3.1.2",
  "gobject>=0.1.0",
  "pydyf==0.10.0",
]
